# solt-pre-commit

./: .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  solt-update-badges.yml  solt-validate.yml  solt_validate.yml
configs/: .pylintrc  .solt-hooks-defaults.yaml  pyproject-base.toml  ruff.toml
docs/: RUFF_LEVELS.md
scripts/: generate-badges.py  generate-readme.py  setup-repo.py  sync-configs.py
solt_pre_commit/: __init__.py  check_deprecated.py  check_init.py  check_manifest.py  check_models.py  check_xml.py
src/solt_pre_commit/: __init__.py  checks_branch_name.py  checks_odoo_module.py  checks_odoo_module_csv.py  checks_odoo_module_po.py  checks_odoo_module_python.py  checks_odoo_module_xml.py  checks_odoo_module_xml_advanced.py  config_loader.py  doc_coverage.py
templates/: .pre-commit-config-local.yaml  .pre-commit-config.yaml  .pylintrc  .solt-hooks.yaml  README-template.md
templates/github-workflows/: solt-validate.yml  solt_validate.yml  solt_validate_client.yml
tests/: __init__.py  test_check_deprecated.py  test_check_manifest.py
