[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solt-pre-commit"
version = "1.0.0"
description = "Custom pre-commit hooks for Odoo module validation - Soltein"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    {name = "Soltein", email = "dev@soltein.mx"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "lxml>=4.9.0",
    "polib>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
solt-check-odoo = "solt_pre_commit.checks_odoo_module:main"
solt-check-branch = "solt_pre_commit.checks_branch_name:main"

[project.urls]
Homepage = "https://github.com/soltein-net/solt-pre-commit"
Repository = "https://github.com/soltein-net/solt-pre-commit"
Issues = "https://github.com/soltein-net/solt-pre-commit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["solt_pre_commit"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]