[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solt-pre-commit"
version = "1.0.0"
description = "Custom pre-commit hooks for Odoo module validation - Soltein (supports Odoo 17.0, 18.0, 19.0)"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Soltein", email = "dev@soltein.mx"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Odoo",
]
dependencies = [
    "lxml>=4.9.0",
    "polib>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.0",
]

[project.scripts]
solt-check-odoo = "checks_odoo_module:main"
solt-check-branch = "checks_branch_name:main"

[project.urls]
Homepage = "https://github.com/soltein-net/solt-pre-commit"
Repository = "https://github.com/soltein-net/solt-pre-commit"
Issues = "https://github.com/soltein-net/solt-pre-commit/issues"

[tool.setuptools]
py-modules = [
    "checks_odoo_module",
    "checks_odoo_module_csv",
    "checks_odoo_module_po",
    "checks_odoo_module_python",
    "checks_odoo_module_xml",
    "checks_odoo_module_xml_advanced",
    "checks_branch_name",
    "config_loader",
    "doc_coverage",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["solt_pre_commit"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
